tests/Fixtures/views/errors/compile_error_partial.tpl
<h1>partial line one</h1>
{foreach $items as $item}
  <li>{$item}</li>
{* unterminated comment + missing /foreach
